tests/reject/send_wrong_type.ty
# send payload must match the channel element type. Both reject.
fn main():
    ch := channel(int, 2)
    send(ch, "hi")
    print("x")
